--- a/laba_of_ci/laba_of_ci.vcxproj.filters
+++ b/laba_of_ci/laba_of_ci.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="laba_c++.cpp">
+    <ClCompile Include="laba_of_ci.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
@@ -24,6 +24,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="laba_of_ci.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
