--- a/laba_of_ci/laba_of_ci/laba_of_ci.vcxproj.filters
+++ b/laba_of_ci/laba_of_ci/laba_of_ci.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Ks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GTS.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Pipe.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GTS.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
